# YTMusicianship

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: semgrep.yml
docs/superpowers/plans/: 2025-03-29-musicmatch-tail.md  2025-03-29-musicmatch.md
docs/superpowers/specs/: 2025-03-29-musicmatch-design.md
skill-definition/: claude-desktop-config.json  ytmusicianship.json
src/ytmusicianship/: __main__.py  config.py  cookie_helper.py  db.py  easy_auth.py  headers_helper.py  mcp_server.py  oauth_helper.py  scheduler.py  simple_auth.py  yt_client.py
src/ytmusicianship/api/: main.py  routes.py  websocket.py
src/ytmusicianship/auth/: oauth_flow.py
src/ytmusicianship/services/: ai_musicmatch.py  jobs.py  library.py  playlist.py  ranking.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/ui/: index.tsx
web/src/pages/: Dashboard.tsx  JobsPage.tsx  MusicMatchPage.tsx  PlaylistPage.tsx  RankingsPage.tsx  SettingsPage.tsx
web/src/styles/: theme.css
