[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytmusicianship"
version = "0.1.0"
description = "AI-powered YouTube Music automation with MCP server and true shuffle"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "mcp>=1.26.0",
    "ytmusicapi>=1.11.5",
    "apscheduler>=3.11.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ytmusicianship"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
